recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
baisseCrayon()
current (steps)

if (steps == 0) {return}
else {
		avance(length)
		droite(angle)
		tree(steps-1, length*shrink, angle, shrink)
		gauche(angle*2)
		tree(steps-1, length*shrink, angle, shrink)
	}

}



def subtree (N:Int, length:Double, angle:Double, shrink:Double)
{avance(length)

	
	
	
	
	
	
	}